[gd_scene load_steps=20 format=3 uid="uid://kkwcrdwkx3hq"]

[ext_resource type="Script" path="res://title_screen.gd" id="1_4di8y"]
[ext_resource type="Texture2D" uid="uid://btywvnc7bjr3v" path="res://Assets/Images/BackDrop1.PNG" id="2_7mis8"]
[ext_resource type="Texture2D" uid="uid://caahwk6l67l00" path="res://Assets/Images/Background1.PNG" id="3_scn5c"]
[ext_resource type="Texture2D" uid="uid://b5qya06k1wt8f" path="res://Assets/Images/Midground1.PNG" id="4_1218r"]
[ext_resource type="Texture2D" uid="uid://glqx7kked68d" path="res://Assets/Images/Foreground1.PNG" id="5_wqcst"]
[ext_resource type="Texture2D" uid="uid://dyoa7dx56jf5n" path="res://Assets/Images/TreeSapling1.PNG" id="7_at7eu"]
[ext_resource type="AudioStream" uid="uid://big7ax5b2sifn" path="res://Assets/Audio/Atmospheric SFX_Winds_V01.wav" id="8_oipbw"]
[ext_resource type="FontFile" uid="uid://cptoivc0vo3b" path="res://Assets/SuperRugged-4nBy9.ttf" id="8_tf6cs"]

[sub_resource type="Animation" id="Animation_jhp20"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/FadeTransitions:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hvicr"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/FadeTransitions:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_f4vde"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI Layer/FadeTransitions:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lto51"]
_data = {
"RESET": SubResource("Animation_jhp20"),
"fade_to_black": SubResource("Animation_hvicr"),
"fade_to_normal": SubResource("Animation_f4vde")
}

[sub_resource type="LabelSettings" id="LabelSettings_8i3iv"]
font = ExtResource("8_tf6cs")
font_size = 123
font_color = Color(0.913725, 1, 1, 0)
outline_color = Color(0, 0, 0, 1)
shadow_size = 57
shadow_color = Color(0, 0.0588235, 0.0509804, 0)
shadow_offset = Vector2(-10, 10)

[sub_resource type="Animation" id="Animation_yfhfs"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.913725, 1, 1, 0), Color(0.913725, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(31, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_sw58t"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.913725, 1, 1, 0), Color(0.913725, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(60, -0.25, 0, 0.25, 0, 70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(31, -0.25, 0, 0.25, 0, 31, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2u5ya"]
_data = {
"RESET": SubResource("Animation_yfhfs"),
"fade_in": SubResource("Animation_sw58t")
}

[sub_resource type="Animation" id="Animation_6duny"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(247, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_qng5w"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(60, -0.25, 0, 0.25, 0, 70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(247, -0.25, 0, 0.25, 0, 247, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtqtv"]
_data = {
"RESET": SubResource("Animation_6duny"),
"fade_to_normal": SubResource("Animation_qng5w")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_4di8y")

[node name="Background" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(971, -6627)
texture = ExtResource("2_7mis8")

[node name="Trees" type="Sprite2D" parent="."]
position = Vector2(971, -6627)
texture = ExtResource("3_scn5c")

[node name="Midground" type="Sprite2D" parent="."]
position = Vector2(971, -6627)
texture = ExtResource("4_1218r")

[node name="Foreground" type="Sprite2D" parent="."]
position = Vector2(971, -6627)
texture = ExtResource("5_wqcst")

[node name="TitleTree" type="Sprite2D" parent="."]
position = Vector2(1000, -6639)
texture = ExtResource("7_at7eu")

[node name="UI Layer" type="CanvasLayer" parent="."]

[node name="FadeTransitions" type="ColorRect" parent="UI Layer"]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI Layer/FadeTransitions"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_lto51")
}

[node name="Title" type="Label" parent="."]
offset_left = 70.0
offset_top = 31.0
offset_right = 1130.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(1, 1, 1, 0)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "The Taller They Are..."
label_settings = SubResource("LabelSettings_8i3iv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
"": SubResource("AnimationLibrary_2u5ya")
}

[node name="Title2" type="RichTextLabel" parent="."]
visible = false
offset_left = 70.0
offset_top = 247.0
offset_right = 638.0
offset_bottom = 340.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_tf6cs")
theme_override_font_sizes/normal_font_size = 83
text = "START GROWING"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title2"]
libraries = {
"": SubResource("AnimationLibrary_rtqtv")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_oipbw")

[connection signal="gui_input" from="Title2" to="." method="_on_title_2_gui_input"]
[connection signal="mouse_entered" from="Title2" to="." method="_on_title_2_mouse_entered"]
[connection signal="mouse_exited" from="Title2" to="." method="_on_title_2_mouse_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
